cmake_minimum_required(VERSION 3.10)

project(gravity LANGUAGES CXX)

# Various sets
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)

add_executable(01 01.cpp)
add_executable(02 02.cpp)
add_executable(03 03.cpp)
add_executable(04 04.cpp)
add_executable(05 05.cpp)
add_executable(06 06.cpp)
add_executable(07 07.cpp)
add_executable(08 08.cpp)
add_executable(09 09.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12.cpp)
add_executable(13 13.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(16 16.cpp)
add_executable(17 17.cpp)
add_executable(18 18.cpp)
add_executable(19 19.cpp)
add_executable(20 20.cpp)
